feat: include auth service m2m and k8s deployment
